--- a/adminTable.html
+++ b/adminTable.html
@@ -330,14 +330,14 @@
         <h2><?php echo "From $dateFrom to $dateTo";  ?></h2>
         <table id="myTable">
           <tr class="Performance">
-            <th>Name</th>
-            <th onclick="sortTable(1)" href="javascript:void(0);">MemberID</th>
+            <th onclick="sortTableByName()" href="javascript:void(0);"><a href="#">Name</a></th>
+            <th onclick="sortTableByMID()" href="javascript:void(0);"><a href="#">MemberID</a></th>
             <?php
               for($i=1; $i<=$totalItemNumber;$i++){
-                echo "<th onclick=\"sortTable($i+1)\" href=\"javascript:void(0);\">Item$i</th>";
+                echo "<th onclick=\"sortTable($i+1)\" href=\"javascript:void(0);\"><a href=\"#\">Item$i</a></th>";
               }
             ?>
-            <th onclick="sortTable(<?php echo $totalItemNumber+2; ?>)" href="javascript:void(0);">Total</th>
+            <th onclick="sortTable(<?php echo $totalItemNumber+2; ?>)" href="javascript:void(0);"><a href="#">Total</a></th>
           </tr>
 
           <?php
@@ -403,6 +403,78 @@
           }
         }
       }
+      function sortTableByMID() {
+  var table, rows, switching, i, x, y, shouldSwitch,numOfCol;
+  table = document.getElementById("myTable");
+  switching = true;
+  /*Make a loop that will continue until
+  no switching has been done:*/
+  while (switching) {
+    //start by saying: no switching is done:
+    switching = false;
+    rows = table.getElementsByTagName("TR");
+    numOfCol = table.rows[0].cells.length;
+
+    /*Loop through all table rows (except the
+    first, which contains table headers):*/
+    for (i = 1; i < (rows.length - 1); i++) {
+      //start by saying there should be no switching:
+      shouldSwitch = false;
+      /*Get the two elements you want to compare,
+      one from current row and one from the next:*/
+      x = rows[i].getElementsByTagName("TD")[1];
+      y = rows[i + 1].getElementsByTagName("TD")[1];
+      //check if the two rows should switch place:
+      if (parseInt(x.innerHTML) > parseInt(y.innerHTML)) {
+        //if so, mark as a switch and break the loop:
+        shouldSwitch= true;
+        break;
+      }
+    }
+    if (shouldSwitch) {
+      /*If a switch has been marked, make the switch
+      and mark that a switch has been done:*/
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+    }
+  }
+}
+function sortTableByName() {
+  var table, rows, switching, i, x, y, shouldSwitch,numOfCol;
+  table = document.getElementById("myTable");
+  switching = true;
+  /*Make a loop that will continue until
+  no switching has been done:*/
+  while (switching) {
+    //start by saying: no switching is done:
+    switching = false;
+    rows = table.getElementsByTagName("TR");
+    numOfCol = table.rows[0].cells.length;
+
+    /*Loop through all table rows (except the
+    first, which contains table headers):*/
+    for (i = 1; i < (rows.length - 1); i++) {
+      //start by saying there should be no switching:
+      shouldSwitch = false;
+      /*Get the two elements you want to compare,
+      one from current row and one from the next:*/
+      x = rows[i].getElementsByTagName("TD")[0];
+      y = rows[i + 1].getElementsByTagName("TD")[0];
+      //check if the two rows should switch place:
+      if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+        //if so, mark as a switch and break the loop:
+        shouldSwitch= true;
+        break;
+      }
+    }
+    if (shouldSwitch) {
+      /*If a switch has been marked, make the switch
+      and mark that a switch has been done:*/
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+    }
+  }
+}
     </script>
   </body>
 </html>
