--- a/table.html
+++ b/table.html
@@ -407,14 +407,16 @@
           $name = getNameByMemberID($mid);
           echo "<h2 id=\"heading2\">Hello $name</h2>"
         ?>
-        <img class="img_left" src="<?php echo get_template_directory_uri(); ?>/test/<?php echo $_SESSION['username']; ?>.jpg">
-        <br></br>
+        <p>
+        <img class="img_left" src="<?php echo get_template_directory_uri(); ?>/test/<?php echo $_SESSION['username']; ?>.jpg"></p>
+        <br/>
+        <p>
         <p></p>
         <p></p>
         <p></p>
-        <p></p>
-        <br></br>
-        <br></br>
+        <br/>
+        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+        <br/>
         <p>Select Month</p>
 
         <table id="right_table">
