--- a/login.html
+++ b/login.html
@@ -84,6 +84,7 @@
       .topnav {
         overflow: hidden;
         background-color: #333;
+        width: 100%;
       }
 
       /* Style the topnav links */
@@ -140,7 +141,7 @@
         margin:0 auto;
         margin-top:100px;
         border:#000;
-        width:700px;
+        width:600px;
       }
 
       .center_header {
@@ -250,9 +251,6 @@
       </div>
 
       <div class="column_right">
-        <div class="right_img">
-          <img src="<?php echo get_template_directory_uri(); ?>/test/cellos.jpg">
-        </div>
       </div>
     </div>
 
