--- a/table.html
+++ b/table.html
@@ -152,7 +152,6 @@
 
       body {
         margin: 0;
-        height: 1000px;
         background-image: linear-gradient(white, grey);
       }
 
@@ -165,6 +164,11 @@
 
       .heading2 {
         color:  FF0000;
+      }
+
+      .heading4 {
+        color:  FF0000;
+        text-align: center;
       }
 
       /* Style the top navigation bar */
@@ -208,22 +212,17 @@
       }
 
       .img_left{
-        width: 250px;
+        text-align: center;
+        margin-top:20px;
+        margin-bottom:20px;
+        width: 220px; 
         height: 200px;
-        float: left;
       }
 
       /* Create three equal columns that floats next to each other */
       .column_center {
         float: left;
-        width: 60%;
-        padding: 15px;
-      }
-
-      /* Create three equal columns that floats next to each other */
-      .column_right {
-        float: left;
-        width: 20%;
+        width: 80%;
         padding: 15px;
       }
 
@@ -405,17 +404,9 @@
           session_start();
           $mid = $_SESSION['username'];
           $name = getNameByMemberID($mid);
-          echo "<h2 id=\"heading2\">Hello $name</h2>"
+          echo "<h2 class=\"heading2\">Hello $name</h2>"
         ?>
-        <p>
-        <img class="img_left" src="<?php echo get_template_directory_uri(); ?>/test/<?php echo $_SESSION['username']; ?>.jpg"></p>
-        <br/>
-        <p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <br/>
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+          <img class="img_left" src="<?php echo get_template_directory_uri(); ?>/test/<?php echo $_SESSION['username']; ?>.jpg">
         <br/>
         <p>Select Month</p>
 
@@ -444,10 +435,31 @@
           </tr>
 
         </table>
+        <br></br>
+        <table id="right_table">
+          <tr id="right_table">
+            <th id="right_table">Item</th>
+            <th id="right_table">Item_No</th>
+            <th id="right_table">Price</th>
+          </tr>
+
+          <?php
+            $sum = getTotalItemNumber();
+            for($i = 1; $i <= $sum; $i ++){
+              $iName = getItemNameByItemID($i);
+              $iPrice = getItemPriceByItemID($i);
+              echo "<tr id=\"right_table\">";
+              echo "<td id=\"right_table\">$iName</td>";
+              echo "<td id=\"right_table\">$i</td>";
+              echo "<td id=\"right_table\">$iPrice</td>";
+              echo "</tr>";
+            }
+          ?>
+        </table>
       </div>
 
       <div class="column_center">
-        <h2><?php echo "From $dateFrom to $dateTo";  ?></h2>
+        <h2 class="heading4"><?php echo "From $dateFrom to $dateTo";  ?></h2>
         <table id="Performance">
           <tr id="Performance">
             <th id="Performance">Name</th>
@@ -581,29 +593,6 @@
             }
             echo "<th id=\"Performance\">$totalIncome</th>";
             echo "</tr>";
-          ?>
-        </table>
-      </div>
-
-      <div class="column_right">
-        <table id="right_table">
-          <tr id="right_table">
-            <th id="right_table">Item</th>
-            <th id="right_table">Item_No</th>
-            <th id="right_table">Price</th>
-          </tr>
-
-          <?php
-            $sum = getTotalItemNumber();
-            for($i = 1; $i <= $sum; $i ++){
-              $iName = getItemNameByItemID($i);
-              $iPrice = getItemPriceByItemID($i);
-              echo "<tr id=\"right_table\">";
-              echo "<td id=\"right_table\">$iName</td>";
-              echo "<td id=\"right_table\">$i</td>";
-              echo "<td id=\"right_table\">$iPrice</td>";
-              echo "</tr>";
-            }
           ?>
         </table>
       </div>
