Change the table color

--- a/table.html
+++ b/table.html
@@ -6,6 +6,7 @@
   		Template Name: table2 
   		*/ 
     ?>
+    
   	<?php
   		session_start();
   		$logout=@$_GET['logout'];
@@ -278,7 +279,7 @@
         padding-top: 1px;
         padding-bottom: 1px;
         text-align: center;
-        background-color: #BA55D3;
+        background-color: #A52A2A;
         color: white;
       }
 
@@ -289,7 +290,7 @@
         padding-top: 16px;
         padding-bottom: 16px;
         text-align: center;
-        background-color: #BA55D3;
+        background-color: #A52A2A;
         color: black;
       }
 
@@ -307,7 +308,7 @@
         padding-top: 1px;
         padding-bottom: 1px;
         text-align: center;
-        background-color: #DDA0DD;
+        background-color: #D2691E;
         color: white;
       }
 
@@ -318,7 +319,7 @@
         padding-top: 8px;
         padding-bottom: 8px;
         text-align: center;
-        background-color: #DDA0DD;
+        background-color: #D2691E;
         color: black;
       }
 
@@ -336,7 +337,7 @@
         padding-top: 1px;
         padding-bottom: 1px;
         text-align: center;
-        background-color: #FFC0CB;
+        background-color: #DEB887;
         color: white;
       }
 
@@ -347,7 +348,7 @@
         padding-top: 8px;
         padding-bottom: 8px;
         text-align: center;
-        background-color: #FFC0CB;
+        background-color: #DEB887;
         color: black;
       }
 
