update table color and add new page for updating profile

--- a/table.html
+++ b/table.html
@@ -279,7 +279,7 @@
         padding-top: 1px;
         padding-bottom: 1px;
         text-align: center;
-        background-color: #A52A2A;
+        background-color: #8C2A05;
         color: white;
       }
 
@@ -290,7 +290,7 @@
         padding-top: 16px;
         padding-bottom: 16px;
         text-align: center;
-        background-color: #A52A2A;
+        background-color: #8C2A05;
         color: black;
       }
 
@@ -308,7 +308,7 @@
         padding-top: 1px;
         padding-bottom: 1px;
         text-align: center;
-        background-color: #D2691E;
+        background-color: #A6502D;
         color: white;
       }
 
@@ -319,7 +319,7 @@
         padding-top: 8px;
         padding-bottom: 8px;
         text-align: center;
-        background-color: #D2691E;
+        background-color: #A6502D;
         color: black;
       }
 
@@ -337,7 +337,7 @@
         padding-top: 1px;
         padding-bottom: 1px;
         text-align: center;
-        background-color: #DEB887;
+        background-color: #C55B07;
         color: white;
       }
 
@@ -348,7 +348,7 @@
         padding-top: 8px;
         padding-bottom: 8px;
         text-align: center;
-        background-color: #DEB887;
+        background-color: #C55B07;
         color: black;
       }
 
