Adding update profile button,need to add link

--- a/layout2.html
+++ b/layout2.html
@@ -411,6 +411,7 @@
     <div class="topnav">
       <a href="http://www.melodysac.com.sg/index.php/en/layout1/">Upper Layer</a>
       <a href="http://www.melodysac.com.sg/index.php/en/table2/">Table</a>
+      <a href="">Update Profile</a>
       <a href="http://www.melodysac.com.sg/index.php/en/contact/">Contact Us</a>
       <form action="#" method="get">
         <button name="logout" value = 1>Logout</button>
