--- a/update_profile.html
+++ b/update_profile.html
@@ -158,8 +158,8 @@
 			<h2>Update Your Profile</h2>
 			<form name="update_profile" method="post">
 				<p>
-					<label for="number">Contact Number</label>
-					<input type="text" id="number" name="Number">
+					<label for="Number">Contact Number</label>
+					<input type="text" id="Number" name="Number">
 				</p>
 				<p>
 					<label for="Email">Email</label>
