--- a/layout1.html
+++ b/layout1.html
@@ -402,7 +402,7 @@
     </div>
     <div class="topnav">
       <a href="http://www.melodysac.com.sg/index.php/en/table2/">Table</a>
-      <a href="">Update Profile</a>
+      <a href="http://www.melodysac.com.sg/index.php/en/update_information/">Update Profile</a>
       <a href="http://www.melodysac.com.sg/index.php/en/contact/">Contact Us</a>
       <form action="#" method="get">
         <button name="logout" value = 1>Logout</button>
