--- a/table.html
+++ b/table.html
@@ -392,7 +392,7 @@
 
     <div class="topnav">
       <a href="http://www.melodysac.com.sg/index.php/en/layout1/">Chart</a>
-      <a href="">Update Profile</a>
+      <a href="http://www.melodysac.com.sg/index.php/en/update_information/">Update Profile</a>
       <a href="http://www.melodysac.com.sg/index.php/en/contact/">Contact Us</a>
       <a HREF="javascript:window.print()">Print</a>
       <form action="#" method="get">
