add button to send email

--- a/adminTable.html
+++ b/adminTable.html
@@ -267,6 +267,7 @@
     </div>
 
     <div class="topnav">
+      <a HREF="http://www.melodysac.com.sg/index.php/en/email_editor/">Send Email</a>
       <a HREF="javascript:window.print()">Print</a>
       <form action="#" method="get">
         <button name="logout" value = 1>Logout</button>
