--- a/adminTable.html
+++ b/adminTable.html
@@ -208,7 +208,7 @@
         padding-top: 12px;
         padding-bottom: 12px;
         text-align: center;
-        background-color: grey;
+        background-color: darkgrey;
         color: white;
       }
 
@@ -225,7 +225,7 @@
         padding-top: 16px;
         padding-bottom: 16px;
         text-align: center;
-        background-color: #DDA0DD;
+        background-color: #A6502D;
         color: black;
       }
 
