--- a/adminTable.html
+++ b/adminTable.html
@@ -12,7 +12,7 @@
         $_SESSION['loggedin']=0;
       if($_SESSION['loggedin']!=1)
       {
-        header("Location:http://www.melodysac.com.sg/index.php/zh/testing/");
+        header("Location:http://www.melodysac.com.sg/index.php/zh/melodymemberlogin/");
         exit;
       }
 
@@ -68,18 +68,22 @@
       $dateFrom;
       $dateTo;
       function getDatefromToByCurrent(){
-      	$currentDate = date('Y-m-d');
-      	$currentMonth = substr($currentDate,5,2);
-      	$nextMonth = $currentMonth+1;
-      	if($nextMonth>12)
-          $nextMonth="01";
-      	else if($nextMonth<10)
-          $nextMonth="0".$nextMonth;
-      	global $dateFrom;
-      	global $dateTo;
-      	$dateFrom = substr($currentDate,0,7)."-01";
-      	$dateTo = substr($currentDate,0,4)."-".$nextMonth."-01";
-      }
+          $currentDate = date('Y-m-d');
+          $currentMonth = substr($currentDate,5,2);
+          $nextMonth = $currentMonth+1;
+          $year = substr($currentDate,0,4);
+          if($nextMonth>12)
+            {
+              $nextMonth="01";
+              $year++;
+            }
+          else if($nextMonth<10)
+            $nextMonth = "0".$nextMonth;
+          global $dateFrom;
+          global $dateTo;
+          $dateFrom = substr($currentDate,0,7)."-01";
+          $dateTo = $year."-".$nextMonth."-01";
+        }
 
       $totalItemNumber = getTotalItemNumber();
       if(isset($_POST["linkToMID"])){
@@ -94,18 +98,22 @@
       }
 
       function getDatefromToByMonth($yyyymm){
-        $month = substr($yyyymm, -2);
-        $year = substr($yyyymm,0, 4);
-        $nextMonth = $month+1;
-        if($nextMonth > 12)
-          $nextMonth="01";
-        else if($nextMonth < 10)
-          $nextMonth = "0".$nextMonth;
-        global $dateFrom;
-        $dateFrom = $year."-".$month."-01";
-        global $dateTo;
-        $dateTo = $year."-".$nextMonth."-01";
-      }
+          $month = substr($yyyymm, -2);
+          $year = substr($yyyymm,0, 4);
+          $toyear = substr($yyyymm,0, 4);
+          $nextMonth = $month+1;
+          if($nextMonth>12)
+            {
+              $nextMonth="01";
+              $toyear++;
+            }
+          else if($nextMonth<10)
+            $nextMonth = "0".$nextMonth;
+          global $dateFrom;
+          $dateFrom = $year."-".$month."-01";
+          global $dateTo;
+          $dateTo = $toyear."-".$nextMonth."-01";
+        }
 
       if(isset($_POST['Month'])){
         getDatefromToByMonth($_POST['Month']);
