--- a/send_email.html
+++ b/send_email.html
@@ -11,7 +11,7 @@
   			$_SESSION['loggedin']=0;
   		if($_SESSION['loggedin']!=1)
   		{
-  			header("Location:http://www.melodysac.com.sg/index.php/zh/testing/");
+  			header("Location:http://www.melodysac.com.sg/index.php/zh/melodymemberlogin/");
   			exit;
   		}
 		function alert($msg) {
