--- a/update_profile.html
+++ b/update_profile.html
@@ -13,7 +13,7 @@
   			$_SESSION['loggedin']=0;
   		if($_SESSION['loggedin']!=1)
   		{
-  			header("Location:http://www.melodysac.com.sg/index.php/zh/testing/");
+  			header("Location:http://www.melodysac.com.sg/index.php/zh/melodymemberlogin/");
   			exit;
   		}
   		$mid = $_SESSION['username'];
@@ -145,7 +145,7 @@
 
 	<body>
 		<div class="header">
-			<img src="<?php echo get_template_directory_uri(); ?>/test/melody.jpg">
+			<img src="<?php echo get_template_directory_uri(); ?>/test/teacherFederation.jpg">
 		</div>
 
 		<div class="topnav">
