--- a/layout1.html
+++ b/layout1.html
@@ -398,7 +398,7 @@
 
   <body>
     <div class="header">
-      <img src="<?php echo get_template_directory_uri(); ?>/test/melody.jpg">
+      <img src="<?php echo get_template_directory_uri(); ?>/test/teacherFederation.jpg">
     </div>
     <div class="topnav">
       <a href="http://www.melodysac.com.sg/index.php/en/table2/">Table</a>
