--- a/send_email.html
+++ b/send_email.html
@@ -181,7 +181,7 @@
 
 	<body>
 		<div class="header">
-			<img src="<?php echo get_template_directory_uri(); ?>/test/melody.jpg">
+			<img src="<?php echo get_template_directory_uri(); ?>/test/teacherFederation.jpg">
 		</div>
 
 		<div class="topnav">
