--- a/admin-WholeTable.html
+++ b/admin-WholeTable.html
@@ -190,7 +190,6 @@
       body {
         margin: 0;
         height: 1000px;
-        background-image: linear-gradient(white, grey);
       }
 
       /* Style the header */
@@ -342,7 +341,7 @@
 
   <body>
     <div class="header">
-      <img src="<?php echo get_template_directory_uri(); ?>/test/melody.jpg">
+      <img src="<?php echo get_template_directory_uri(); ?>/test/ArtCenterFederation.jpg">
     </div>
 
     <div class="topnav">
