--- a/adminTable.html
+++ b/adminTable.html
@@ -132,7 +132,6 @@
 
       body {
         margin: 0;
-        background-image: linear-gradient(white, grey);
       }
 
       /* Style the header */
@@ -271,7 +270,7 @@
 
   <body>
     <div class="header">
-      <img src="<?php echo get_template_directory_uri(); ?>/test/teacherFederation.jpg">
+      <img src="<?php echo get_template_directory_uri(); ?>/test/ArtCenterFederation.jpg">
     </div>
 
     <div class="topnav">
