--- a/login.html
+++ b/login.html
@@ -70,7 +70,6 @@
       body {
         margin: 0;
         height: 1000px;
-        background-image: linear-gradient(white, grey);
       }
 
       /* Style the header */
@@ -212,7 +211,7 @@
 
   <body>
     <div class="header">
-      <img src="<?php echo get_template_directory_uri(); ?>/test/teacherFederation.jpg">
+      <img src="<?php echo get_template_directory_uri(); ?>/test/ArtCenterFederation.jpg">
     </div>
 
     <div class="topnav">
@@ -248,6 +247,11 @@
             </div>
           </div>
         </form>
+        
+        </br>
+        <div class="header">
+          <img src="<?php echo get_template_directory_uri(); ?>/test/logo.jpg" width="200">
+        </div>
       </div>
 
       <div class="column_right">
