--- a/update_profile.html
+++ b/update_profile.html
@@ -63,7 +63,6 @@
 
 			body {
 				margin: 0;
-				background-image: linear-gradient(white, grey);
 				height: 1000px;
 			}
 
@@ -145,7 +144,7 @@
 
 	<body>
 		<div class="header">
-			<img src="<?php echo get_template_directory_uri(); ?>/test/teacherFederation.jpg">
+			<img src="<?php echo get_template_directory_uri(); ?>/test/ArtCenterFederation.jpg">
 		</div>
 
 		<div class="topnav">
