change image to text

--- a/Seasoned_instruments.html
+++ b/Seasoned_instruments.html
@@ -88,6 +88,16 @@
 		<br>
 		<br>
 		<br>
-		<img src="<?php echo get_template_directory_uri(); ?>/test/seasoned.jpg" width="800">
+		<span style="font-size: 18pt;"><strong>SEASONED VIOLINS &amp; CELLOS</strong></span>
+			<ol>
+			 	<li><span style="font-size: 18pt;">The <strong><em>MelodySAC </em></strong>Shop also carries a excellent collection of seasoned violins &amp; cellos.</span></li>
+			 	<li><span style="font-size: 18pt;">Trade-in value @100% of purchase price when you buy your next instrument!</span></li>
+			</ol>
+			<span style="font-size: 18pt;">*Condition(s): Trade-in instrument must be appraised by a <strong><em>MelodySAC</em></strong>-authorized luthier to be in good condition.</span>
+
+			<span style="font-size: 18pt;">New instrument to be purchased must be of higher value than instrument to be traded-in.</span>
+			<ol start="3">
+			 	<li><span style="font-size: 18pt;"><strong><em>MelodySAC </em></strong>provide professional luthier for maintenance.</span></li>
+			</ol>
 	</body>
 </html>
