--- a/login.html
+++ b/login.html
@@ -250,7 +250,7 @@
         
         </br>
         <div class="header">
-          <img src="<?php echo get_template_directory_uri(); ?>/test/logo.jpg" width="200">
+          <img src="<?php echo get_template_directory_uri(); ?>/test/Melodylogo.jpg" width="200">
         </div>
       </div>
 
