--- a/MelodySAC_instruments.html
+++ b/MelodySAC_instruments.html
@@ -88,19 +88,49 @@
 		<br>
 		<br>
 		<br>
-		<img src="<?php echo get_template_directory_uri(); ?>/test/SAC_instruments.jpg" width="800">
+		<span style="font-size: 18pt;"><strong>PURCHASE INFORMATION</strong></span>
+		<ol>
+		 	<li><span style="font-size: 14pt;">All sizes of violins, Violas and Cello in the <strong><em>MelodySAC</em></strong> Shop are available for purchase.</span></li>
+		 	<li><span style="font-size: 14pt;">Trade-in value @ 30% of purchase price when you buy your next <strong><em>MelodySAC</em></strong> instrument!</span></li>
+		</ol>
+		<span style="font-size: 14pt;">*Condition(s): Trade-in instrument must be appraised by a <strong><em>MelodySAC</em></strong>-authorized luthier to be in good condition. New instrument to be purchased must be of higher value than instrument to be traded-in.</span>
+		<ol start="3">
+		 	<li><span style="font-size: 14pt;"><strong><em> MelodySAC </em></strong>provide professional luthier for maintenance.</span></li>
+		</ol>
+		&nbsp;
+
+		<span style="font-size: 18pt;"><strong>RENTAL</strong><strong> INFORMATION</strong></span>
+		<ol>
+		 	<li><span style="font-size: 14pt;">The <strong><em>MelodySAC</em></strong> Shop provides rental services for 1/10 to 3/4 sized <strong><em>MelodySAC</em></strong> Violin; 1/8 to 3/4 sized <strong><em>MelodySAC</em></strong> Cello.</span></li>
+		 	<li><span style="font-size: 14pt;">Rental of <strong><em>MelodySAC</em></strong> instruments are in blocks of 12 months. At any time during the rental, it is possible to purchase the Violin and Cello.</span></li>
+		 	<li><span style="font-size: 14pt;"><strong><em>MelodySAC </em></strong>provide professional luthier for maintenance.</span></li>
+		</ol>
+		&nbsp;
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/1.jpg" width="800">
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/8.jpg" width="800">
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/09.jpg" width="800">
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/12.jpg" width="800">
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/13.jpg" width="800">
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/14.jpg" width="800">
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/16.jpg" width="800">
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/17.jpg" width="800">
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/18.jpg" width="800">
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/19.jpg" width="800">
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/20.jpg" width="800">
+<br />
 		<img src="<?php echo get_template_directory_uri(); ?>/test/21.jpg" width="800">
+<br />
 
 
 	</body>
