--- a/Seasoned_instruments.html
+++ b/Seasoned_instruments.html
@@ -89,15 +89,20 @@
 		<br>
 		<br>
 		<span style="font-size: 18pt;"><strong>SEASONED VIOLINS &amp; CELLOS</strong></span>
-			<ol>
-			 	<li><span style="font-size: 18pt;">The <strong><em>MelodySAC </em></strong>Shop also carries a excellent collection of seasoned violins &amp; cellos.</span></li>
-			 	<li><span style="font-size: 18pt;">Trade-in value @100% of purchase price when you buy your next instrument!</span></li>
-			</ol>
-			<span style="font-size: 18pt;">*Condition(s): Trade-in instrument must be appraised by a <strong><em>MelodySAC</em></strong>-authorized luthier to be in good condition.</span>
+		<ol>
+		 	<li><span style="font-size: 14pt;">The <strong><em>MelodySAC</em></strong> Shop also carries a excellent collection of seasoned violins &amp; cellos.</span></li>
+		 	<li><span style="font-size: 14pt;">Trade-in value @100% of purchase price when you buy your next instrument!</span></li>
+		</ol>
+		<span style="font-size: 14pt;">*Condition(s): Trade-in instrument must be appraised by a <strong><em>MelodySAC</em></strong>-authorized luthier to be in good condition. New instrument to be purchased must be of higher value than instrument to be traded-in.</span>
+		<ol start="3">
+		 	<li><span style="font-size: 14pt;"><strong><em>MelodySAC </em></strong>provide professional luthier for maintenance.</span></li>
+		</ol>
+		&nbsp;
 
-			<span style="font-size: 18pt;">New instrument to be purchased must be of higher value than instrument to be traded-in.</span>
-			<ol start="3">
-			 	<li><span style="font-size: 18pt;"><strong><em>MelodySAC </em></strong>provide professional luthier for maintenance.</span></li>
-			</ol>
+		<span style="font-size: 18pt;"><strong>European brand-new Violins &amp; Cellos</strong></span>
+		<ol>
+		 	<li><span style="font-size: 14pt;">The <strong><em>MelodySAC</em></strong> Shop also carries a collection of European brand-new violins &amp; cellos.</span></li>
+		 	<li><span style="font-size: 14pt;"><strong><em>MelodySAC </em></strong>provide professional luthier for maintenance.</span></li>
+		</ol>
 	</body>
 </html>
